# fastapi-htmx-test

./: README.md  main.py  pyproject.toml
templates/: items.html
